# acuity-python-workshop

./: .gitignore  README.md
.github/workflows/: tests.yml
checkpoints/lab-3-start/catalog/: decorators.py  server.py
codealong/: module-1-simple.ipynb  module-1.py  module-2-simple.ipynb  module-2.py  module-3.py  products-simple.json
labs/: lab-07-unit-tests.md  lab-09-reports-ci.md  lab-10-nl-query-filter.md  lab-12-test-the-agent.md
labs/lab-01-product-foundation/: README.md
labs/lab-02-persistent-catalog/: README.md
labs/lab-02-persistent-catalog/starter/: storage.py
labs/lab-03-local-api-server/: README.md
labs/lab-04-pydantic-models/: README.md
labs/lab-05-api-client/: README.md
labs/lab-06-bulk-import/: README.md
project/: README.md
project/checkpoints/: README.md
project/checkpoints/day-2-start/: .gitignore
project/checkpoints/day-2-start/catalog/: cli.py  models.py  server.py  storage.py
project/checkpoints/day-3-start/catalog/: __init__.py  client.py  models.py
project/checkpoints/day-4-start/catalog/: cli.py  decorators.py  server.py  (+1 more)
project/solution/catalog/: agent.py  storage.py
project/solution/data/: products.csv
project/solution/tests/: test_agent.py  test_cli.py  test_client.py  test_decorators.py  test_import_csv.py  test_models.py  test_server.py  test_storage.py
project/start-here/: pyproject.toml
project/start-here/catalog/: client.py  import_csv.py  models.py  server.py  storage.py
project/start-here/tests/: conftest.py  test_lab01.py  test_lab02.py  test_lab03.py  test_lab04.py  test_lab05.py  test_lab06.py
(+3 files in other folders)
