[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "product-catalog"
version = "0.4.0"
description = "Acuity workshop reference solution — a product catalog that grows from class to agentic AI across 4 days."
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.6",
    "requests>=2.31",
    "openai>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-html>=4.1",
    "pytest-mock>=3.12",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["catalog*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that hit a live FastAPI server (slow)",
    "eval: golden-prompt evaluation cases (Day 4)",
]

[tool.coverage.run]
source = ["catalog"]
branch = true
